[package]
name = "in-memory-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features = ["full"] }
bytes = { version = "1" }

[[bin]]
name = "server"
path = "src/bin/server.rs"